Correct date format

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -248,7 +248,7 @@ jobs:
         working-directory: ${{ runner.temp }}
 
       - name: Get Date for bundles
-        run: echo "CURRENT_DATE=($(date +'%a %b %Y %r'))" >> $GITHUB_ENV
+        run: echo "CURRENT_DATE=($(date +'%A %B %d %Y %r'))" >> $GITHUB_ENV
 
       - name: Create draft release with new assets
         id: draft-release
@@ -273,11 +273,11 @@ jobs:
         run: |
           echo "::group::Move tag to last commit on master"
           sha=$(gh api repos/{owner}/{repo}/git/ref/heads/master --jq '.object.sha')
-          gh api repos/{owner}/{repo}/git/refs/tags/daily -f sha=$sha --template 'Tag {{.ref | autocolor "blue"}} moved on {{.object.sha | autocolor "blue"}} ({{.object.url}})'
+          gh api repos/{owner}/{repo}/git/refs/tags/daily -f sha=$sha --template 'Tag {{.ref | color "blue"}} moved on {{.object.sha | color "blue"}} ({{.object.url}})'
           echo "::endgroup::"
           echo "::group::delete current release and undraft new" 
           gh release delete daily -y
           gh api repos/{owner}/{repo}/releases/${{ steps.draft-release.outputs.id}} -f draft=false -f tag_name='daily' --template 'Release url: {{.html_url}}'
-          echo -e"\n::endgroup::"
+          echo -e "\n::endgroup::"
 
         
