--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -273,7 +273,7 @@ jobs:
         run: |
           echo "::group::Move tag to last commit on master"
           sha=$(gh api repos/{owner}/{repo}/git/ref/heads/master --jq '.object.sha')
-          gh api repos/{owner}/{repo}/git/refs/tags/daily -f sha=$sha --template 'Tag {{.ref | color "blue"}} moved on commit sha {{.object.sha | color "blue"}} ({{.object.url}})'
+          gh api repos/{owner}/{repo}/git/refs/tags/daily -f sha=$sha --template 'Tag {{.ref | color "blue"}} moved on commit sha {{.object.sha | color "blue"}}.'
           echo -e "\n::endgroup::"
           echo "::group::delete current release and undraft new" 
           gh release delete daily -y
