full run with all assets

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,6 @@ name: Build TinyTeX Bundles
 
 jobs:
   build-windows:
-    if: ${{ false }}
     runs-on: windows-latest
     name: Build Bundles For Windows
 
@@ -165,7 +164,6 @@ jobs:
           retention-days: 1
 
   build-mac:
-    if: ${{ false }}
     runs-on: macos-latest
     name: Build Bundles For macOS
 
@@ -234,7 +232,7 @@ jobs:
           retention-days: 1
 
   deploy:
-    needs: [build-linux]
+    needs: [build-windows, build-linux, build-mac]
     runs-on: ubuntu-latest
     name: deploy artifacts as Github release
 
