--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,9 @@
 on:
   workflow_dispatch:
-  schedule: 
+  schedule:
     - cron: '5 4 * * *'
 
-    
+
 name: Build TinyTeX Bundles
 
 jobs:
@@ -12,18 +12,18 @@ jobs:
     name: Build Bundles For Windows
 
     env:
-      CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
+      CTAN_REPO: https://ctan.org/tex-archive/systems/texlive/tlnet
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Clone repo
         uses: actions/checkout@v2
-      
+
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
         with:
-          pandoc-version: '2.17.1.1' 
-      
+          pandoc-version: '2.17.1.1'
+
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -87,18 +87,18 @@ jobs:
     name: Build Bundles For Linux
 
     env:
-      CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
+      CTAN_REPO: https://ctan.org/tex-archive/systems/texlive/tlnet
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Clone repo
         uses: actions/checkout@v2
-      
+
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
         with:
-          pandoc-version: '2.17.1.1' 
-      
+          pandoc-version: '2.17.1.1'
+
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -169,18 +169,18 @@ jobs:
     name: Build Bundles For macOS
 
     env:
-      CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
+      CTAN_REPO: https://ctan.org/tex-archive/systems/texlive/tlnet
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Clone repo
         uses: actions/checkout@v2
-      
+
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
         with:
-          pandoc-version: '2.17.1.1' 
-      
+          pandoc-version: '2.17.1.1'
+
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -274,9 +274,7 @@ jobs:
           sha=$(gh api repos/{owner}/{repo}/git/ref/heads/master --jq '.object.sha')
           gh api repos/{owner}/{repo}/git/refs/tags/daily -f sha=$sha --template 'Tag {{.ref | color "blue"}} moved on commit sha {{.object.sha | color "blue"}}.'
           echo -e "\n::endgroup::"
-          echo "::group::delete current release and undraft new" 
+          echo "::group::delete current release and undraft new"
           gh release delete daily -y
           gh api repos/{owner}/{repo}/releases/${{ steps.draft-release.outputs.id}} -f draft=false -f tag_name='daily' --template 'Release url: {{.html_url}}'
           echo -e "\n::endgroup::"
-
-        
