--- a/codecov.yml
+++ b/codecov.yml
@@ -2,5 +2,9 @@ comment: false
 
 coverage:
   status:
-    project: off
-    patch: off
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
