--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,7 +84,7 @@ jobs:
 
       - name: Build TinyTeX-2 (scheme-full)
         run: |
-          RScript "tools/build-scheme-full.R"
+          Rscript "tools/build-scheme-full.R"
           Compress-Archive $Env:APPDATA\\TinyTeX TinyTeX-2.zip
 
       - name: Test Installation
@@ -153,7 +153,7 @@ jobs:
 
       - name: Build TinyTeX-2 (scheme-full)
         run: |
-          RScript "tools/build-scheme-full.R"
+          Rscript "tools/build-scheme-full.R"
           tar zcf TinyTeX-2.tar.gz -C ~ .TinyTeX
 
       - name: Export Regex file
@@ -233,7 +233,7 @@ jobs:
 
       - name: Build TinyTeX-2 (scheme-full)
         run: |
-          RScript "tools/build-scheme-full.R"
+          Rscript "tools/build-scheme-full.R"
           tar zcf TinyTeX-2.tgz -C ~/Library TinyTeX
 
       - name: Test Installation
