--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,8 +2,7 @@
 ^\.Rproj\.user$
 ^tools$
 ^TUGboat$
-^\.travis\.yml$
-^appveyor\.yml$
 ^codecov\.yml$
 ^TinyTeX.*\.zip$
 ^\.github$
+^cran-comments\.md$
