--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ env:
   GH_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
   # required for GH to run on another repo (-R option)
   # https://cli.github.com/manual/gh_help_environment
-  GH_REPO: yihui/tinytex-releases
+  GH_REPO: rstudio/tinytex-releases
 
 jobs:
   new-release:
@@ -277,7 +277,7 @@ jobs:
       - name: Create release note
         run: |
           echo "This release contains the daily build of TinyTeX ($(date +'%A %B %d %Y %r %Z'))." > notes.md
-          echo "Please see https://github.com/yihui/tinytex-releases for more info." >> notes.md
+          echo "Please see https://github.com/rstudio/tinytex-releases for more info." >> notes.md
 
       # TODO: Remove when version 2.8 will be available on GHA
       - name: Update GH to get 2.8 needed for gh release edit
