Use ubuntu-latest

--- a/.github/workflows/required-latex-pkgs.yaml
+++ b/.github/workflows/required-latex-pkgs.yaml
@@ -14,7 +14,7 @@ name: check required LateX packages
 
 jobs:
   LateX-Packages:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     name: Ubuntu 18-04 (release)
 
