--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,9 @@ jobs:
         with:
           pandoc-version: '2.17.1.1'
 
+      - name: Install upx
+        run: choco install upx
+
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -139,6 +142,7 @@ jobs:
 
       - name: Build TinyTeX-0.zip & install more package
         run: |
+          sudo apt install -y upx
           sed -i 's|# finished base|cp $OLDPWD/install-tl-unx.tar.gz tools/; Rscript tools/clean-tlpdb.R; tar zcf TinyTeX-0.tar.gz -C ~ .TinyTeX|' tools/install-unx.sh
           ./tools/install-unx.sh
 
@@ -223,6 +227,7 @@ jobs:
 
       - name: Build TinyTeX-0.zip & install more package
         run: |
+          brew install upx
           sed -i '' 's|# finished base|Rscript "${{ github.workspace }}/tools/clean-tlpdb.R"; tar zcf "${{ github.workspace}}/TinyTeX-0.tgz" -C ~/Library TinyTeX|' tools/install-unx.sh
           ./tools/install-unx.sh
 
@@ -257,7 +262,7 @@ jobs:
           command: |
             gh release upload ${{needs.new-release.outputs.draft-tag}} TinyTeX-0.tgz TinyTeX-1.tgz TinyTeX.tgz TinyTeX-2.tgz --clobber
 
-  tinitex: 
+  tinitex:
     needs: [new-release]
     name: Get tinitex release
     runs-on: ubuntu-latest
@@ -276,7 +281,7 @@ jobs:
           7z a -o.. tinitex.zip x86_64-pc-windows-msvc/.
           7z a -ttar -so tinitex.tar x86_64-apple-darwin/. | 7z a -si -o.. tinitex.tgz
           7z a -ttar -so tinitex.tar x86_64-unknown-linux-gnu/. | 7z a -si -o.. tinitex.tar.gz
-      
+
       - run: ls -lisa tinitex
 
       - name: Upload bundles
