fix #394: use the xz format for TinyTeX-2 bundle
`tar xf` can automatically recognize the format when extracting the archive, so the extension .tgz won't matter

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -239,7 +239,8 @@ jobs:
       - name: Build TinyTeX-2 (scheme-full)
         run: |
           Rscript "tools/build-scheme-full.R"
-          tar zcf TinyTeX-2.tgz -C ~/Library TinyTeX
+          # this really is the xz format (for smaller archive size) but `tar xf` can recognize it automatically regardless of file extension
+          tar Jcf TinyTeX-2.tgz -C ~/Library TinyTeX
 
       - name: Test Installation script
         env:
