--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -155,7 +155,7 @@ jobs:
       - name: Build TinyTeX-2 (scheme-full)
         run: |
           Rscript "tools/build-scheme-full.R"
-          tar zcf TinyTeX-2.tar.gz -C ~ .TinyTeX
+          tar Jcf TinyTeX-2.tar.gz -C ~ .TinyTeX
 
       - name: Export Regex file
         run: |
@@ -258,7 +258,7 @@ jobs:
           command: |
             gh release upload ${{needs.new-release.outputs.draft-tag}} TinyTeX-0.tgz TinyTeX-1.tgz TinyTeX.tgz TinyTeX-2.tgz --clobber
 
-  tinitex: 
+  tinitex:
     needs: [new-release]
     name: Get tinitex release
     runs-on: ubuntu-latest
@@ -277,7 +277,7 @@ jobs:
           7z a -o.. tinitex.zip x86_64-pc-windows-msvc/.
           7z a -ttar -so tinitex.tar x86_64-apple-darwin/. | 7z a -si -o.. tinitex.tgz
           7z a -ttar -so tinitex.tar x86_64-unknown-linux-gnu/. | 7z a -si -o.. tinitex.tar.gz
-      
+
       - run: ls -lisa tinitex
 
       - name: Upload bundles
