import download_file() from xfun, since we don't use AppVeyor any more

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ import(stats)
 import(tools)
 import(utils)
 importFrom(xfun,dir_exists)
+importFrom(xfun,download_file)
 importFrom(xfun,grep_sub)
 importFrom(xfun,in_dir)
 importFrom(xfun,is_linux)
