Add debug env var for gh call

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -264,6 +264,8 @@ jobs:
 
       - name: Upload bundles
         uses: nick-fields/retry@v3
+        env:
+          GH_DEBUG: api
         with:
           timeout_minutes: 5
           max_attempts: 5
