--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -289,13 +289,13 @@ jobs:
       - name: Repackage in per OS bundle
         working-directory: tinitex
         run: |
-          pushd $(find . -maxdepth 1 -type d -name "windows")
+          pushd $(find . -maxdepth 1 -type d -name "*windows*")
           7z a -o.. tinitex.zip x86_64-pc-windows-msvc/.
           popd
-          pushd $(find . -maxdepth 1 -type d -name "macOS")
+          pushd $(find . -maxdepth 1 -type d -name "*macOS*")
           7z a -ttar -so tinitex.tar aarch64-apple-darwin/. | 7z a -si -o.. tinitex.tgz
           popd
-          pushd $(find . -maxdepth 1 -type d -name "linux")
+          pushd $(find . -maxdepth 1 -type d -name "*ubuntu*")
           7z a -ttar -so tinitex.tar x86_64-unknown-linux-gnu/. | 7z a -si -o.. tinitex.tar.gz
           popd
 
