--- a/.github/workflows/required-latex-pkgs.yaml
+++ b/.github/workflows/required-latex-pkgs.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::curl
+          extra-packages: any::curl, any::kableExtra, any::bookdown
 
       - name: Find required LaTeX packages
         run: Rscript tools/test-packages.R
